--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  color: white;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 1.5px;
 }
 
 /* font-family: 'Montserrat', sans-serif;
