--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,7 +1,8 @@
 .profile-header {
-    background-color: #DF2056;
-    padding: 30px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  background-color: #df2056;
+  color: #fff;
+  padding: 30px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
